# fina-web

./: CMakeLists.txt  README.md
scripts/: rebuild.ps1
src/: CMakeLists.txt  fina_web.c  projectfina-web.c
src/conf/: fina-web.conf  projectfina-web.conf
systemd/system/: projectfina-web.service
